--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
         "autoprefixer": "^9.8.6",
         "cross-env": "^7.0.3",
         "cssnano": "^5.0.6",
+        "clean-css": "^5.2.4",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.2.6",
         "postcss-cli": "^8.3.1",
         "sass": "^1.35.2",
-        "del": "^6.0.0"
+        "del": "^6.0.0",
+        "terser": "^5.10.0"
     },
     "browserslist": [
         "last 2 versions"
