Change deployment target

--- a/.github/workflows/production_deploy.yml
+++ b/.github/workflows/production_deploy.yml
@@ -29,6 +29,6 @@ jobs:
         username: ${{ secrets.GHA_FTP_USER }}
         password: ${{ secrets.GHA_FTP_PASS }}
         local-dir: ./build/
-        server-dir: overte/overte.tuxfamily.org-web/htdocs/
+        server-dir: overte/overte.org-web/htdocs/
         exclude: |
           **/staging/**
