--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "postcss-cli": "^8.3.1",
         "sass": "^1.35.2",
         "del": "^6.0.0",
-        "terser": "^5.10.0"
+        "terser": "^5.10.0",
+        "markdown-it": "^12.3.2",
+        "markdown-it-attrs": "^4.1.3"
     },
     "browserslist": [
         "last 2 versions"
