--- a/.github/workflows/staging_deploy.yml
+++ b/.github/workflows/staging_deploy.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Build website
       shell: bash
       run: |
-        npm run build
+        npm run build-staging
 
     - name: Deploy website
       uses: SamKirkland/FTP-Deploy-Action@4.3.0
