--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
         "watch:eleventy": "eleventy --serve",
         "build:sass": "sass  --no-source-map src/sass/all.scss:src/css/all.css",
         "build:eleventy": "eleventy",
+        "build:eleventy-staging": "eleventy --pathprefix='/staging/'",
         "postbuild": "postcss src/css/all.css -o build/css/all.min.css -u autoprefixer cssnano --no-map",
         "start": "npm-run-all images build:sass postbuild --parallel watch:*",
         "images": "node images",
-        "build": "npm-run-all images build:sass build:eleventy postbuild"
+        "build": "npm-run-all images build:sass build:eleventy postbuild",
+        "build-staging": "npm-run-all images build:sass build:eleventy-staging postbuild"
     },
     "dependencies": {
         "@11ty/eleventy": "^0.12.1",
