--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
         "watch:nano": "postcss src/css/all.css -o build/css/all.min.css -u autoprefixer cssnano --no-map --watch src/css/all.css",
         "watch:eleventy": "eleventy --serve",
         "build:sass": "sass  --no-source-map src/sass/all.scss:src/css/all.css",
-        "build:eleventy": "eleventy",
-        "build:eleventy-staging": "eleventy --pathprefix='/staging/'",
+        "build:eleventy": "eleventy --pathprefix='/'",
+        "build:eleventy-staging": "eleventy --pathprefix='/staging/' --config=.eleventy-staging.js",
         "postbuild": "postcss src/css/all.css -o build/css/all.min.css -u autoprefixer cssnano --no-map",
         "start": "npm-run-all images build:sass postbuild --parallel watch:*",
         "images": "node images",
